tests/correctness/resources/miniboxing/tests/compile/gh-bug-71.check
newSource1.scala:4: error: [ occured while creating miniboxed method foo$J in class Test$J ]
method id in object Test cannot be accessed in object miniboxing.tests.compile.bug71.Test
  def foo(t: T): T = Test.id(t)
                          ^